# sound-examples

./: README.md
FMOD/: README.md
FMOD/FMOD-CMake-macOS/: CMakeLists.txt  REFERENCES.md  main.cc
FMOD/FMOD-qmake-macOS/: REFERENCES.md
FMOD/FMOD-qmake-macOS/PlaySound/: PlaySound.pro  main.cpp  main.qml  player.cpp  player.h
